2014-04-12  Barak A. Pearlmutter  <barak@cs.nuim.ie>
	* lisp/Makefile.am: Include makefile-temp in distribution.

2014-04-12  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-site.el.in: Be more verbose about what we want.

2014-04-12  Roland Winkler  <winkler@gnu.org>
	* lisp/makefile-temp: Obey proper dependencies.  Clean up.

2014-04-12  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-vm.el, m4/emacs_vm.m4: Require vm-autoloads.

2014-04-12  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-separator-alist): Treat AKAs consistent with
	other fields.

2014-03-11  Barak A. Pearlmutter  <barak@cs.nuim.ie>
	Generate lisp/bbdb-site.el via lisp/Makefile as pkgdatadir is only
	known at "make" time.
	* configure.ac: Remove lisp/bbdb-site.el from autoconfig files.
	Increase BBDB version number to 3.1.1
	* lisp/Makefile.am: Generate lisp/bbdb-site.el.
	* lisp/bbdb-site.el.in: Initialize bbdb-print-tex-path with a
	placeholder for pkgdatadir.

2014-03-11  Barak A. Pearlmutter  <barak@cs.nuim.ie>
	* Makefile.am: Install files COPYING, ChangeLog, AUTHORS, NEWS,
	README, and TODO in the doc directory.
	* doc/Makefile.am: Install bbdb.pdf in the doc directory.

2014-03-11  Barak A. Pearlmutter  <barak@cs.nuim.ie>
	* m4/package_date.m4: Use "date -u" if "date --rfc-3339" fails.

2014-02-28  Roland Winkler  <winkler@gnu.org>
	* configure.ac: Increase BBDB version number to 3.1.
	* README: Update accordingly.  Fix typos.
	* Makefile.am: Include autogen.sh in distribution.
	* lisp/Makefile.am: Include lisp/bbdb-pkg.el in distribution.
	* lisp/makefile-temp: Include lisp/bbdb-pkg.el.

2014-02-28  Roland Winkler  <winkler@gnu.org>
	Do not use `prompt' in a non-emacs sense.
	* lisp/bbdb.el: Do not autoload bbdb-search and bbdb-search-prompt
	when compiling.
	(bbdb-auto-revert, bbdb-silent, bbdb-default-domain)
	(bbdb-default-area-code, bbdb-offer-to-create)
	(bbdb-update-records-address): Fix docstring.

	* lisp/bbdb-com.el (bbdb-search-read): Renamed from
	bbdb-search-prompt.